# BIND

./: .gitignore  .readthedocs.yaml  BIND Scatter-Residual Analysis.md  BIND convincingness.md  CLAUDE.md  LICENSE  PLAN_NOTES.md  PLAN_power_spectrum_section.md  PLAN_scatter_paper.md  README.md  REPO_MAP.md  _build_group_nb.py  analysis_3d.ipynb  analysis_3d_generated.ipynb  analysis_beyond_mass_learning.ipynb  analysis_cv_derivatives.ipynb  analysis_cv_derivatives_scatter.ipynb  analysis_cv_derivatives_scatter_cube.ipynb  analysis_physics.ipynb  arepo_hydro_blank.txt  arepo_parent_blank.txt  assembly_feedback_susceptibility.ipynb  build_assembly_table.py  build_feedback_relation_paper.py  build_scatter_walkthrough.py  c2st_discriminator.ipynb  cv_dmo_sb35_params_injection.py  cv_sim0_sb35_injection_fast.py  data.py  data_3d.py  draft.tex  extract_dmo_structure.py  fd_jacobian_cv.py  feedback_relation_paper.ipynb  flow_matching_visualization.ipynb  full_map_power_spectrum.ipynb  gen_obs_notebook.py  group_response_model.ipynb  headline_decomposition.ipynb  icm_entropy_pressure_feedback.ipynb  (+69 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: cleanup-specialist.agent.md
.github/workflows/: ci.yml
analysis/ksz/: __init__.py  _io.py  gen_sobol_taucube.py  inference.py  information_content.py  information_content_sobol.py  npe_tau.py  param_meta.py  plot_validation_a.py  plot_validation_b.py  plot_validation_c.py  plot_validation_d.py  plot_validation_e.py  plot_validation_f.py  (+10 more)
docs/: WORKLOG.md  api.md  baryonify.md  cli.md  conf.py  index.md  method.md  paper2_ksz_plan.md  parameters.md  quickstart.md  requirements.txt  training.md
examples/: generate_demo.py  paint_walkthrough.ipynb
results_explorer_2d_artifacts/: benchmark_arrays.npz  benchmark_summary.csv
scatter/: Bind_joint_scatter.md  FIGURES_WALKTHROUGH.md  PAPER_OUTLINE.md  assembly_3d.py  assembly_probes.py  calibration_cv.py  cv_calibration.csv  fig1_bind_feedback_mean.py  fig2_Rj_heatmap.py  fig3_cosmo_DMO_decomposition.py  fig4_truth_scatter_vs_ASN1.py  fig5_mean_vs_scatter_orthogonality.py  fig6_headline_candidates.py  fig7_parameter_signal_survey.py  fig8_parameter_clustering.py  fig_feedback_sensitivity.py  fig_fgas_tension.py  fig_relation_sensitivity.py  fig_sensitivity_mass.py  figures.py  fill_outline_numbers.py  joint_struct_pilot.py  joint_struct_sweep.py  joint_struct_sweep_35.py  measure_scatter.py  obs_common.py  phase4_1p_truth.py  residual.py  residual_figures.py  residual_pipeline.py  scatter paper autopilot.md  scatter_decomposition.py  scatter_intra_jacobian.py  scatter_jacobian.py  sensitivity.py  test_measure_scatter.py  validate_1p_truth.py  validate_cosmo_rescaling.py
scripts_paper_figs/: fig_projection_2d_vs_cube.py  fig_scaling_relations.py
stale/: analysis_3d.ipynb  cfg_sweep_CV.ipynb  data_3d.py  evaluate_params.ipynb  fix_norm_stats.py  generate_sobol_explorer.py  modal_app.py  offset.ipynb  offset_notes.md  run_halo_server.sh  run_sobol_explorer.sh  run_test_suite_all.sh  run_train.sh  run_train_param_norm.sh  run_train_si0.sh  run_train_star_norm.sh  run_train_two_head_star_occ.sh  serve_halo_explorer.py  stars_bias_diagnosis.py  stars_bias_diagnosis_plot.py  stars_correction_coefs.json  suite_analysis_2d.ipynb  suite_analysis_mass_response.ipynb  train_3d.py  upload_to_modal.sh
test_suite/: __init__.py  artifacts.py  config.py  pipeline.py  runner.py  schemas.py
tools/: download_weights.py
(+42 files in other folders)
