[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bind"
version = "0.1.0"
description = "BIND2: conditional flow-matching emulator that paints baryonic fields onto dark-matter-only maps (CAMELS IllustrisTNG)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Max E. Lee" }]
keywords = ["cosmology", "flow-matching", "diffusion", "CAMELS", "IllustrisTNG", "emulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "torch>=2.0",
    "lightning>=2.0",
    "torch-ema",
    "numpy",
    "pandas",
    "h5py",
    "huggingface_hub",
    # Pylians3 provides the MAS_library module used for CIC particle-to-grid
    # projection. It is the canonical pixelizer for BIND inputs.
    "Pylians",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Repository = "https://github.com/Maxelee/BIND"
Weights = "https://huggingface.co/Maxelee/BIND2"

[project.scripts]
bind-paint = "bind.cli.paint:main"
bind-camels-suite = "bind.cli.camels_suite:main"
bind-download-weights = "bind.tools.download_weights:main"
bind-slim-checkpoint = "bind.tools.slim_checkpoint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bind = ["assets/*.csv", "assets/*.txt"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
